@@ -1,3 +1,7 @@
+2011-01-20  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #17140: htmlArea RTE: In WebKit, RTE inserts incorrect link if text is double-clicked
+
 2010-11-24  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #16124: htmlArea RTE: Links are incorrectly updated in Google Chrome
