@@ -1,3 +1,7 @@
+2011-01-21  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #17140: htmlArea RTE: In WebKit, RTE inserts incorrect link if text is double-clicked
+
 2011-01-11  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Fixed bug #16967: [Caching framework] Remove not exising "GlobalsBackend" from config_default.php
